Categorization editor, categories page, and working categorization algorithm